test/samples/invalid/interp/assert_in_trans.maruir
fun fail() {
	entry:
		assert false;
		return;
}

fun middle() {
	entry:
		call fail();
		return;
}

fun main() {
	entry:
		call middle();
		return;
}
